--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 # For how it is generated, see `hack/generate-authors.sh`.
 
  Bruce CHILENGA <brucechillenga24@gmail.com>
- Ibrahim Sultan 
+ Ibrahim Sultan <ibrahimsultan6@gmail.com> 
